# multi_layer_perceptron

./: .gitignore  CMakeLists.txt  Makefile  README.md  documentations.tex  ecosystem.config.js  go.mod  index.html  package-lock.json  package.json  test_dist.sh
data/: classification.csv  game_ai.csv  regression.csv
deploy/docker/: Dockerfile  docker-compose.yml  entrypoint.sh
deploy/helm/mlp-engine/: Chart.yaml  values.yaml
deploy/helm/mlp-engine/templates/: _helpers.tpl  configmap.yaml  master.yaml  namespace.yaml  worker.yaml
deploy/k8s/: configmap.yaml  master-deployment.yaml  namespace.yaml  worker-deployment.yaml
deploy/systemd/: mlp-master.service  mlp-worker@.service
game/: game.js  model.js  model_weights.js  shop.js  style.css
inferences/: inference.c  inference.cpp  inference.go  inference.py  inference.ts
scripts/: export_weights_to_js.py  generate_game_data.py  seed_csv.py
src/: cli_parser.hpp  csv_reader.hpp  main.cpp  matrix.hpp  mlp.hpp  network.hpp  onnx_exporter.hpp  opencl_utils.hpp
